--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 
 <!-- About -->
 <section id="about">
-    <h2>About Me</h2>
     <div class="about-container">
-      <div class="about-text">
+    <section class="row justify-center">
+    <h2>About Me</h2>
+    <div class="card-column project-item">
         <p>
           I'm a Gulf Coast native, born and raised in Mississippi, with a passion for clinical health informatics. I hold a Bachelor of Interdisciplinary Studies in Clinical Health Informatics from Georgia State University, where I graduated in 2017.
         </p>
@@ -39,7 +40,7 @@
         </p>
       </div>
     </div>
-  </section>
+</section>
 
     <!-- Projects -->
     <main>
@@ -67,7 +68,7 @@
                     <img src="img/take-a-hike.png" alt="Project 3">
                     <h2 class="card-header">Take a Hike Application</h2>
                 </a>
-                <p>This project allows users to discover, organize, and join local and global hiking events, creating lasting connections with like-minded outdoor enthusiasts, and promoting an active lifestyle while fostering environmental awareness as a social media page.</p>
+                <p>The Take a Hike project allows users to discover, organize, and join local and global hiking events, creating lasting connections with like-minded outdoor enthusiasts, and promoting an active lifestyle while fostering environmental awareness as a social media page.</p>
             </div>
 
         </section>
